# EchoMesh

./: .gitignore  Cargo.toml  README.md  test.html
.github/workflows/: desktop-release.yml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: tauri-dev-env.cjs
frontend/src/: editor.ts  export.ts  fileshare.ts  history.ts  main.ts  messaging.ts  signaling.ts  storage.ts  style.css  types.ts  webrtc.ts  whiteboard.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
src/: lib.rs  main.rs  server.rs  types.rs
src/room/: manager.rs
src/ws/: handler.rs  messages.rs
